fix problem overflow tests

--- a/source/sass/blocks/tickets.scss
+++ b/source/sass/blocks/tickets.scss
@@ -96,6 +96,26 @@
 
   input {
     @include visually-hidden;
+
+    &:focus + label {
+      outline: 2px solid  $color-sapphire;
+      outline-offset: 2px;
+    }
+
+    &:checked + label {
+      color: $color-sapphire;
+    }
+
+    &:checked + label::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 100%;
+      height: 2px;
+      z-index: 2;
+      background: $color-crimson;
+    }
   }
 
   label {
@@ -108,6 +128,10 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 150%;
+
+    &:hover {
+      color: $color-torch-red;
+    }
 
     @include vp-1199 {
       font-size: 18px;
@@ -127,27 +151,6 @@
         margin: 0 42px;
       }
     }
-  }
-
-  input:checked + label {
-    color: $color-sapphire;
-  }
-
-  label:hover,
-  input:focus + label {
-    color: $color-torch-red;
-  }
-
-  input:focus + label::after,
-  input:checked + label::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 2px;
-    z-index: 2;
-    background: $color-crimson;
   }
 }
 
@@ -301,6 +304,8 @@
 [data-input-1]:checked ~ .tickets__panels > [data-panel-1],
 [data-input-2]:checked ~ .tickets__panels > [data-panel-2],
 [data-input-3]:checked ~ .tickets__panels > [data-panel-3],
-[data-input-4]:checked ~ .tickets__panels > [data-panel-4] {
+[data-input-4]:checked ~ .tickets__panels > [data-panel-4],
+[data-input-5]:checked ~ .tickets__panels > [data-panel-5],
+[data-input-6]:checked ~ .tickets__panels > [data-panel-6] {
   display: grid;
 }
